# welfare_bot

./: .gitignore  Dockerfile  ETHICS.md  README.md  docker-compose.yml  railway.toml
welfare-bot-backend/: .env.example  .gitignore  README.md  alembic.ini  db_ping.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  reset_alembic.py  seed_fake_data.py
welfare-bot-backend/alembic/: script.py.mako
welfare-bot-backend/alembic/versions/: 20260413_add_risk_events_and_message_risk_fields.py  a1b2c3d4e5f6_wellbeing_daily_metrics.py  b4f4e669ff45_repair_users_memory_columns.py  d348e4711fa6_add_memory_summary_fields_to_users.py  e5dce3c3496b_add_password_reset_tokens.py  fbb7ec1fe6e4_init.py  fcb29ed51b2a_merge_heads.py
welfare-bot-backend/app/: main.py
welfare-bot-backend/app/api/: deps_auth.py
welfare-bot-backend/app/core/: config.py
welfare-bot-backend/app/db/: __init__.py  session.py
welfare-bot-backend/app/integrations/: openai_client.py
welfare-bot-backend/app/schemas/: __init__.py  call_session.py  care_contact.py  checkin.py  checkin_pipeline.py  checkin_response.py  conversation.py  notification.py  risk_analysis.py  user.py
welfare-bot-backend/app/services/: __init__.py  aggregation_pipeline.py  aggregation_pipeline_class.py  analytics_service.py  anomaly_detector.py  auth_service.py  call_service.py  checkin_flow_service.py  conversation_quality.py  conversation_service.py  conversation_starter.py  data_cleaning_service.py  data_quality.py  memory_service.py  ml_anomaly_model.py  (+13 more)
welfare-bot-backend/dashboard/: streamlit_app.py
(+68 files in other folders)
